fix(edit): fix visual bug on safari (#1499)

--- a/next-tavla/app/globals.css
+++ b/next-tavla/app/globals.css
@@ -218,7 +218,6 @@
     }
 
     .box {
-        height: 100%;
         width: 100%;
         border-radius: 0.5em;
         padding: 2em;
